--- a/public/assets/bower.json
+++ b/public/assets/bower.json
@@ -23,6 +23,7 @@
     "bootstrap": "~3.3.5",
     "font-awesome": "fontawesome#~4.4.0",
     "uikit": "~2.23.0",
-    "animate.css": "~3.4.0"
+    "animate.css": "~3.4.0",
+    "impress.js": "~0.5.*"
   }
 }
